# convex-hull

./: App.cpp  App.h  CMakeLists.txt  README.md  main.cpp  points.txt
.github/workflows/: cpp-tests.yml
algorithms/: AndrewAlgorithm.cpp  AndrewAlgorithm.h  IAlgorithm.h  QuickhullAlgorithm.cpp  QuickhullAlgorithm.h
executables/: convex_hull
performance/: Performance.cpp  Performance.h
point_files/: circle.txt  floats.txt  floats2.txt  floats3.txt  line.txt  random.txt  random2.txt  square.txt  square2.txt  test.txt  triangle.txt
point_providers/: CirclePointProvider.cpp  CirclePointProvider.h  FromFilePointProvider.cpp  FromFilePointProvider.h  IPointProvider.h  LinePointProvider.cpp  LinePointProvider.h  Point.h  PresetPointProvider.cpp  PresetPointProvider.h  RandomPointProvider.cpp  RandomPointProvider.h  SquarePointProvider.cpp  SquarePointProvider.h
protocol/: Protocol.cpp  Protocol.h
tests/: CMakeLists.txt  TestAndrew.cpp  TestIntegration.cpp  TestPoints.cpp  TestQuickHull.cpp
visualization/: App.cpp  App.h
